feat : logout and add page contacts is not yet

--- a/frontend/.env
+++ b/frontend/.env
@@ -2,3 +2,4 @@
 DATABASE_URL="postgresql://postgres:mhaddaou@localhost:5432/dev-db"
 NEXT_PUBLIC_REGISTER="/api/auth/register"
 NEXT_PUBLIC_LOGIN="/api/auth/login"
+NEXT_PUBLIC_USER="/api/users/"
