done: is still just some errors in dockerizing

--- a/app/.env
+++ b/app/.env
@@ -1,6 +1,8 @@
-
-DATABASE_URL="postgresql://postgres:mhaddaou@localhost:5432/dev-db"
+DATABASE_URL="postgresql://postgres:mhaddaou@postgresqldb:5432/dev-db"
 NEXT_PUBLIC_REGISTER="/api/auth/register"
 NEXT_PUBLIC_LOGIN="/api/auth/login"
 NEXT_PUBLIC_USER="/api/users/"
 NEXT_PUBLIC_CONTACTS="/api/contacts/"
+NEXT_PUBLIC_PAGINATION="/api/contacts/pagination/"
+NEXT_PUBLIC_SEARCH="/api/contacts/search/"
+LIMIT="10"
